force-app/main/default/objects/Retail_Product_Information__c/Retail_Product_Information__c.object-meta.xml
<CustomObject>
    <label>Retail Product Information</label>
    <nameField>
        <displayFormat>RPI-{0000}</displayFormat>
        <label>Retail Product Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Product Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>