force-app/main/default/objects/Retail_Product_Information__c/fields/Add_Lead_Visit__c.field-meta.xml
<CustomField>
    <fullName>Add_Lead_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Lead Visit</label>
    <referenceTo>Retail_Lead_Visit__c</referenceTo>
    <relationshipLabel>Retail Product Information</relationshipLabel>
    <relationshipName>Retail_Product_Information</relationshipName>
    <type>Lookup</type>
</CustomField>