force-app/main/default/objects/Retail_Product_Information__c/fields/Add_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Add_Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Product Group</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail Product Information</relationshipLabel>
    <relationshipName>Retail_Product_Information</relationshipName>
    <type>Lookup</type>
</CustomField>