force-app/main/default/objects/Retail_Product_Information__c/fields/Retail_Customer_Visit__c.field-meta.xml
<CustomField>
    <fullName>Retail_Customer_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Customer Visit</label>
    <referenceTo>Retail_Customer_Visit__c</referenceTo>
    <relationshipLabel>Retail Product Information</relationshipLabel>
    <relationshipName>Retail_Product_Information</relationshipName>
    <type>Lookup</type>
</CustomField>