force-app/main/default/objects/Retail_Product_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Add_Lead_Visit__c</columns>
    <columns>Add_Product_Group__c</columns>
    <columns>Quantity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>